<resources>
    <string name="app_name">BlackJill</string>

    <string name="rules">
        \n
The goal is to get your cards to 21, but not past. You can either stand if you want to stop
        before 21 or hit and be dealt a new card. Your will play against the dealer. My "Charlie-rule"
        applies, meaning, if you have 5 cards on your hand and your total is less than 22, you win.
\n\n
Card Values:\n
A = 1 or 11\n
J, Q, K = 10\n
The rest at face value
    </string>

    <string name="back_button">Back</string>
    <string name="hit_button">Hit</string>
    <string name="stands_button">Stand</string>
    <string name="deal_button">Deal</string>
    <string name="rules_name">Rules</string>
    <string name="multiplayer_name">Muliplayer</string>
    <string name="play">Play</string>
    <string name="stats">Stats</string>
    <string name="exit_button">Exit</string>
    <string name="btn_exit"><u>Exit</u></string>
    <string name="Stats_text">

        \n Single player
        \n
        \nTotal games: %1$d
        \nWon games: %2$d
        \nLost games: %3$d
        \nTie games: %4$d
        \n
        \nMultiplayer
        \n
        \nTotal games: %5$d
        \nWon games: %6$d
        \nLost games: %7$d
        \nTie games: %8$d

    </string>
    <string name="Player1_name">Player 1</string>
    <string name="Player2_name">Player 2</string>
    <string name="dealer_plays">Dealer plays</string>
    <string name="player1_turn">Player 1\'s turn</string>
    <string name="player2_turn">Player 2\'s turn</string>

</resources>